[build-system]
requires = ["maturin>=0.13.3,<0.14"]
build-backend = "maturin"

[project]
name = "pyxel"
version = "1.9.18"
description = "A retro game engine for Python"
readme = "docs/README-abspath.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [{ name = "Takashi Kitao", email = "takashi.kitao@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
]
urls = { homepage = "https://github.com/kitao/pyxel" }

[project.scripts]
pyxel = "pyxel.cli:cli"

[tool.maturin]
manifest-path = "crates/pyxel-extension/Cargo.toml"
module-name = "pyxel.pyxel_extension"
python-source = "python"

[tool.maturin.target."x86_64-apple-darwin"]
macos-deployment-target = "10.12"

[tool.maturin.target."aarch64-apple-darwin"]
macos-deployment-target = "11.0"

[tool.isort]
profile = "black"
