[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyxel"
version = "2.2.1"
requires-python = ">=3.8"
authors = [{ name = "Takashi Kitao", email = "takashi.kitao@gmail.com" }]
description = "A retro game engine for Python"
readme = "../docs/README-abspath.md"
license = { file = "../LICENSE" }
keywords = ["game", "gamedev"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/kitao/pyxel"
Repository = "https://github.com/kitao/pyxel.git"
Changelog = "https://github.com/kitao/pyxel/blob/main/CHANGELOG.md"

[project.scripts]
pyxel = "pyxel.cli:cli"

[tool.maturin]
manifest-path = "../rust/pyxel-wrapper/Cargo.toml"
module-name = "pyxel.pyxel_wrapper"
python-source = "../python"

[tool.maturin.target."x86_64-apple-darwin"]
macos-deployment-target = "10.12"

[tool.maturin.target."aarch64-apple-darwin"]
macos-deployment-target = "11.0"
