[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyxel"
version = "2.9.2"
description = "A retro game engine for Python"
readme = "../README.md"
requires-python = ">=3.10"
authors = [{ name = "Takashi Kitao", email = "takashi.kitao@gmail.com" }]
license = "MIT"
license-files = ["pyxel/LICENSE"]
keywords = ["game", "gamedev", "retro", "pixel-art", "game-engine"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/kitao/pyxel"
Repository = "https://github.com/kitao/pyxel.git"
Changelog = "https://github.com/kitao/pyxel/blob/main/CHANGELOG.md"

[project.scripts]
pyxel = "pyxel.cli:cli"

[tool.maturin]
manifest-path = "../crates/pyxel-binding/Cargo.toml"
module-name = "pyxel.pyxel_binding"

# aarch64 requires macOS 11 (Big Sur); x86_64 still supports 10.13 (High Sierra).
[tool.maturin.target."aarch64-apple-darwin"]
macos-deployment-target = "11.0"

[tool.maturin.target."x86_64-apple-darwin"]
macos-deployment-target = "10.13"
