[package]
name = "pyxel-cli"
version = "1.5.0"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2018"
description = "Command line interface for Pyxel"
repository = "<url-to-repository>"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "game-engine", "graphics", "multimedia"]
keywords = ["game", "gamedev", "python"]

[[bin]]
name = "pyxel"
path = "src/bin.rs"

[dependencies]
cpython = "0.6.0"
tempfile = "3.2.0"
zip = { version = "0.5.13", default-features = false, features = ["deflate"] }
