[package]
name = "pyxel-engine"
version = "1.5.0"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2018"
description = "A retro game engine for Python and Rust"
repository = "https://github.com/kitao/pyxel"
license = "MIT"
readme = "README.md"
categories = ["game-engine", "graphics", "multimedia"]
keywords = ["game", "gamedev", "python"]

[lib]
name = "pyxel"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test_pyxel.rs"
harness = false

[dependencies]
array-macro = "2.1.0"
blip_buf = "0.1.4"
chrono = "0.4.19"
gifski = "1.5.1"
image = "0.23.14"
imgref = "1.9.1"
parking_lot = "0.11.2"
rgb = "0.8.29"
sdl2 = { version = "0.35.1", default-features = false, features = ["bundled", "static-link", "unsafe_textures"] }
zip = { version = "0.5.13", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
