[package]
name = "pyxel-extension"
version = "0.1.0"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2018"

[lib]
name = "pyxel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.14.1", features = ["extension-module", "abi3-py37"] }
pyxel-engine = { path = "../engine" }
