[package]
name = "pyxel-binding"
version = "2.7.1"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "pyxel_binding"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py38", "extension-module", "multiple-pymethods"] }
pyxel-core = { path = "../pyxel-core" }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
sysinfo = "0.38"

[features]
sdl2_dynamic = ["pyxel-core/sdl2_dynamic"]
sdl2_static = ["pyxel-core/sdl2_static"]
