[package]
name = "pyxel-core"
version = "1.9.18"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
rust-version = "1.63"
description = "Core engine for Pyxel, a retro game engine for Python"
repository = "https://github.com/kitao/pyxel"
license = "MIT"
readme = "README.md"
categories = ["game-engines", "graphics", "multimedia"]
keywords = ["game", "gamedev", "python"]

[lib]
name = "pyxel"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test_pyxel.rs"
harness = false

[dependencies]
gif = "0.12"
image = "0.24"
indexmap = "2.0"
noise = "0.7"
once_cell = "1.18"
parking_lot = "0.12"
platform-dirs = "0.3"
rand = "0.8"
rand_xoshiro = "0.6"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
chrono = "0.4"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
sdl2 = { version = "0.35", default-features = false, features = [
    "bundled",
    "static-link",
    "unsafe_textures",
] }

[target.'cfg(not(any(target_os = "windows", target_os="macos")))'.dependencies]
sdl2 = { version = "0.35", default-features = false, features = [
    "unsafe_textures",
] }

[patch.crates-io]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", branch = "master" }
