[package]
name = "pyxel-core"
version = "2.7.2"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "pyxel"

[dependencies]
blip_buf = "0.1"
chrono = { version = "0.4", features = ["wasmbind"] }
directories = "6.0"
fontdue = "0.9"
gif = "0.14"
glow = "0.16"
hound = "3.5"
image = "0.25"
indexmap = "2.7"
noise = "0.9"
paste = "1.0"
rand = "0.10"
rand_xoshiro = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8"
symphonia = { version = "0.5", features = ["all-codecs"] }
toml = "1.0"
zip = { version = "8.1", default-features = false, features = ["deflate"] }

[build-dependencies]
bindgen = "0.72"
cmake = "0.1"
flate2 = "1.0"
tar = "0.4"

[features]
sdl2_dynamic = []
sdl2_static = []
