[package]
name = "pyxel-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "pyxel"

[dependencies]
blip_buf = "0.1"
# wasmbind routes time queries through js-sys for Emscripten/WASM builds
chrono = { version = "0.4", features = ["wasmbind"] }
directories = "6.0"
fontdue = "0.9"
gif = "0.14"
glow = "0.17"
hound = "3.5"
image = "0.25"
indexmap = "2.7"
libc = "0.2"
noise = "0.9"
paste = "1.0"
rand = "0.10"
rand_xoshiro = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8"
# all-codecs enables every format the Sound.pcm() loader can accept
symphonia = { version = "0.5", features = ["all-codecs"] }
toml = "1.0"
# deflate is the only codec needed for .pyxapp / .pyxres
zip = { version = "8.1", default-features = false, features = ["deflate"] }

[build-dependencies]
bindgen = "0.72"
cmake = "0.1"
flate2 = "1.0"
tar = "0.4"

[features]
sdl2_dynamic = []
sdl2_static = []
