[package]
name = "pyxel-engine"
version = "0.1.0"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2018"

[lib]
name = "pyxel"
path = "src/lib.rs"

[[bin]]
name = "pyxel"
path = "src/main.rs"

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[dependencies]
array-macro = "2.1.0"
blip_buf = "0.1.4"
image = "0.23.14"
sdl2 = { version = "0.34.5", default-features = false, features = ["bundled", "static-link", "unsafe_textures"] }
