[package]
name = "pyxel-engine"
version = "1.8.2"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
description = "Core engine for Pyxel, a retro game engine for Python"
repository = "https://github.com/kitao/pyxel"
license = "MIT"
readme = "../../docs/README-abspath.md"
categories = ["game-engines", "graphics", "multimedia"]
keywords = ["game", "gamedev", "python"]

[lib]
name = "pyxel"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test_pyxel.rs"
harness = false

[dependencies]
array-macro = "2.1"
chrono = "0.4"
gif = "0.11"
image = "0.24"
indexmap = "1.8"
noise = "0.7"
once_cell = "1.13"
parking_lot = "0.12"
platform-dirs = "0.3"
rand = "0.8"
rand_xoshiro = "0.6"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
sdl2 = { version = "0.35", default-features = false, features = [
    "bundled",
    "static-link",
    "unsafe_textures",
] }

[target.'cfg(any(target_os = "linux", target_os = "emscripten"))'.dependencies]
sdl2 = { version = "0.35", default-features = false, features = [
    "unsafe_textures",
] }

[build-dependencies]
cc = "1.0"

[patch.crates-io]
cmake = { git = "https://github.com/messense/cmake-rs.git", branch = "cross-compile" }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", branch = "master" }
