[package]
name = "pyxel-core"
version = "2.0.0"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
description = "Core engine for Pyxel, a retro game engine for Python"
repository = "https://github.com/kitao/pyxel"
license = "MIT"
readme = "README.md"
categories = ["game-engines", "graphics", "multimedia"]
keywords = ["game", "gamedev", "python"]

[lib]
name = "pyxel_engine"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test_pyxel.rs"
harness = false

[dependencies]
gif = "0.12"
glow = "0.12"
image = "0.24"
indexmap = "2.0"
noise = "0.7"
once_cell = "1.18"
parking_lot = "0.12"
platform-dirs = "0.3"
rand = "0.8"
rand_xoshiro = "0.6"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
pyxel-platform = { path = "../pyxel-platform", version = "2.0.0" }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
chrono = "0.4"
