[package]
name = "pyxel-platform"
version = "2.0.4"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
description = "Platform abstraction layer for pyxel, a retro game engine for python"
repository = "https://github.com/kitao/pyxel"
license = "MIT"
readme = "README.md"
categories = ["game-engines", "graphics", "multimedia"]
keywords = ["game", "gamedev", "python"]

[lib]
name = "pyxel_platform"
path = "src/lib.rs"

[dependencies]
cfg-if = "1.0"
glow = "0.13"
once_cell = "1.18"
parking_lot = "0.12"
paste = "1.0"

[build-dependencies]
bindgen = "0.69"
cmake = "0.1"
flate2 = "1.0"
tar = "0.4"
