[package]
name = "pyxel-web"
version = "1.8.3"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
description = "Web version of Pyxel, a retro game engine for Python"
repository = "https://github.com/kitao/pyxel"
license = "MIT"
readme = "../../docs/README-abspath.md"
categories = ["game-engines", "graphics", "multimedia"]
keywords = ["game", "gamedev", "python"]

[lib]
name = "pyxel_web"
crate-type = ["cdylib"]

[dependencies]
pyxel-wrapper = { path = "../pyxel-wrapper", version = "1.8.3" }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
sysinfo = "0.23"

[build-dependencies]
cc = "1.0"

[patch.crates-io]
cmake = { git = "https://github.com/messense/cmake-rs.git", branch = "cross-compile" }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", branch = "master" }
