[package]
name = "pyxel-wrapper"
version = "0.1.0"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.14.1", features = ["extension-module", "abi3-py37"] }
parking_lot = "0.11.1"
pyxel-engine = { path = "../pyxel-engine" }
