[package]
name = "pyxel-wrapper"
version = "2.0.2"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
description = "Python extension module for Pyxel, a retro game engine for Python"
repository = "https://github.com/kitao/pyxel"
license = "MIT"
readme = "README.md"
categories = ["game-engines", "graphics", "multimedia"]
keywords = ["game", "gamedev", "python"]

[lib]
name = "pyxel_wrapper"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["abi3-py37", "extension-module"] }
pyxel-engine = { path = "../pyxel-engine", version = "2.0.2" }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
sysinfo = "0.29"
