[package]
name = "pyxel-wrapper"
version = "0.1.0"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2018"
description = "Python interface for Pyxel core library"
repository = "<url-to-repository>"
license = "MIT"
readme = "README.md"
categories = ["development-tools::ffi"]
keywords = ["..."]

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.14.1", features = ["extension-module", "abi3-py37"] }
pyxel-engine = { path = "../engine" }
