[package]
name = "pyxel-engine"
version = "1.6.7"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
description = "Core engine for Pyxel, a retro game engine for Python"
repository = "https://github.com/kitao/pyxel"
license = "MIT"
readme = "README.md"
categories = ["game-engines", "graphics", "multimedia"]
keywords = ["game", "gamedev", "python"]

[lib]
name = "pyxel"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test_pyxel.rs"
harness = false

[dependencies]
array-macro = "2.1.0"
blip_buf = "0.1.4"
chrono = "0.4.19"
gif = "0.11.3"
image = "0.23.14"
indexmap = "1.7.0"
parking_lot = "0.11.2"
platform-dirs = "0.3.0"
zip = { version = "0.5.13", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "windows")'.dependencies]
sdl2 = { version = "0.35.1", default-features = false, features = ["bundled", "unsafe_textures"] }

[target.'cfg(target_os = "macos")'.dependencies]
sdl2 = { version = "0.35.1", default-features = false, features = ["bundled", "static-link", "unsafe_textures"] }

[target.'cfg(target_os = "linux")'.dependencies]
sdl2 = { version = "0.35.1", default-features = false, features = ["unsafe_textures"] }
