[package]
name = "pyxel-engine"
version = "1.7.2"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
description = "Core engine for Pyxel, a retro game engine for Python"
repository = "https://github.com/kitao/pyxel"
license = "MIT"
readme = "README.md"
categories = ["game-engines", "graphics", "multimedia"]
keywords = ["game", "gamedev", "python"]

[lib]
name = "pyxel"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test_pyxel.rs"
harness = false

[dependencies]
array-macro = "2.1"
chrono = "0.4"
gif = "0.11"
image = "0.24"
indexmap = "1.8"
noise = "0.7"
parking_lot = "0.12"
platform-dirs = "0.3"
rand = "0.8"
rand_xoshiro = "0.6"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "windows")'.dependencies]
sdl2 = { version = "0.35", default-features = false, features = ["bundled", "unsafe_textures"] }

[target.'cfg(target_os = "macos")'.dependencies]
sdl2 = { version = "0.35", default-features = false, features = ["bundled", "static-link", "unsafe_textures"] }

[target.'cfg(target_os = "linux")'.dependencies]
sdl2 = { version = "0.35", default-features = false, features = ["unsafe_textures"] }
