[package]
name = "pyxel-engine"
version = "2.5.13"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
description = "Core engine for Pyxel, a retro game engine for Python"
repository = "https://github.com/kitao/pyxel"
license = "MIT"
keywords = ["game", "gamedev", "python"]
categories = ["game-engines", "graphics", "multimedia"]

[lib]
name = "pyxel"

[dependencies]
blip_buf = "0.1"
chrono = { version = "0.4", features = ["wasmbind"] }
directories = "6.0"
fontdue = "0.9"
gif = "0.14"
glow = "0.16"
hound = "3.5"
image = "0.25"
indexmap = "2.7"
noise = "0.9"
parking_lot = "0.12"
pyxel-platform = { path = "../pyxel-platform", version = "2.5.13" }
rand = "0.9"
rand_xoshiro = "0.7"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8"
toml = "0.9"
zip = { version = "7.0", default-features = false, features = ["deflate"] }

[features]
sdl2 = ["pyxel-platform/sdl2"]
sdl2_bundle = ["pyxel-platform/sdl2_bundle"]
