[package]
name = "pyxel-platform"
version = "2.3.18"
authors = ["Takashi Kitao <takashi.kitao@gmail.com>"]
edition = "2021"
description = "Platform abstraction layer for Pyxel, a retro game engine for Python"
repository = "https://github.com/kitao/pyxel"
license = "MIT"
keywords = ["game", "gamedev", "python"]
categories = ["game-engines", "graphics", "multimedia"]

[dependencies]
cfg-if = "1.0"
glow = "0.16"
parking_lot = "0.12"
paste = "1.0"

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"
flate2 = "1.0"
tar = "0.4"
